@@ -1,3 +1,6 @@
+2009-05-15 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Show amount of the recipient in the list view (Recipient list module) and the last step of the sending wizard (module direct mail). 
+
 2009-03-21 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Preview icon (HTML and plaintext) will use correct domain
 	* Fetching will use the correct domain in the multidomain environment.
